# lutin

./: .gitignore  CMakeLists.txt  Makefile  Readme.md  classe_generateur.py
TestUnitaires/: TestTableDesSymboles.cpp
Tests/: mktest.sh  readme.md  test.sh
Tests/01.NoArgument/: stderr.out
Tests/05.DoubleDeclaration/: stderr.out
Tests/06.1.AnalyseStatique/: stderr.out
Tests/06.2.AnalyseStatique/: stderr.out
Tests/06.4.AnalyseStatique/: stderr.out
Tests/08.2.Optimisation/: std.out
Tests/11.ErreurSyntaxique/: run  stderr.out
Tests/12.RecuperationSurErreur/: description  run  std.out  stderr.out
Tests/files/: analyse_complete.lt  analyse_complete2.lt  constante.lt  doubleDeclarationVar.lt  ecrire.lt  mess.lt  momo.lt  recuperationSurErreur.lt  synerror.lt
demo/affichage/: test.lt
demo/analyse_lexicale/: test.lt  test_id_avec_.lt  test_nom_const.lt
demo/analyse_statique/: division_zero  duplications.lt  mod_constante.lt  non_utilisees  vardeclaree_noninitialisee.lt
demo/analyse_syntaxique/: test.lt  test_sans_pv.lt  test_sans_pv.lt~  test_sans_pv_v.lt  test_sans_pv_v_aff.lt  test_sans_pv_v_aff_eg.lt
demo/execution/: divison_par_zero.lt  execution_normale.lt  nondeclare_noninitialise.lt
demo/memoire/: execution_anormale.lt  execution_normale.lt  lexerror.lt  programme_incorrecte.lt
demo/optimisation/: optimisation_complexe.lt  optimisation_neutre_absorbant.lt  remplacement_complexe.lt  remplacement_constante.lt  remplacement_variable.lt
doc/: SymbolesNonTerminaux.puml  automate.puml  classes.puml  structure.puml
lib/: easyloggingpp.h
src/: main.cpp
src/automate/: Automate.cpp  Automate.h  EtatFin.cpp  TableDesSymboles.cpp  TableDesSymboles.h
src/etats/: Etat.cpp  Etat.h  Etat0.cpp  Etat0.h  Etat1.cpp  Etat1.h  Etat10.cpp  Etat10.h  Etat11.cpp  Etat11.h  Etat12.cpp  Etat12.h  Etat13.cpp  Etat13.h  Etat14.cpp  Etat14.h  Etat15.cpp  Etat15.h  Etat16.cpp  Etat16.h  Etat17.cpp  Etat17.h  Etat18.cpp  Etat18.h  Etat19.cpp  Etat19.h  Etat2.cpp  Etat2.h  Etat20.cpp  Etat20.h  Etat21.cpp  Etat21.h  Etat22.cpp  Etat22.h  Etat23.cpp  Etat23.h  Etat24.cpp  Etat24.h  Etat25.cpp  Etat25.h  (+57 more)
src/lexeur/: Lexeur.cpp  Lexeur.h
src/symboles/: AffectTerminal.h  AffectationConstante.cpp  AffectationConstante.h  BlocDeclaration.cpp  BlocDeclaration.h  BlocDeclarations.cpp  BlocDeclarations.h  BlocInstruction.cpp  BlocInstruction.h  (+73 more)
